--- a/tasks/tasks_jython.yml
+++ b/tasks/tasks_jython.yml
@@ -19,7 +19,7 @@
     tags:
         -jython
 
-  - name: Jython | sudo ln -s /usr/local/lib/jython/bin/jython /usr/local/bin/
+  - name: Jython | sudo ln -s /usr/local/lib/jython/bin/jython /usr/local/bin/jython
     file: src=/usr/local/lib/jython/bin/jython dest=/usr/local/bin/ state=link
     when: jython_present | failed
     become: yes
@@ -41,5 +41,5 @@
 
   - name: Jython | Put version to log
     shell: jython --version
-    when: jython_present | failed    
+    when: jython_present | failed
     changed_when: False
